--- a/src/sample/view/add_reservation.fxml
+++ b/src/sample/view/add_reservation.fxml
@@ -3,7 +3,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -30,12 +29,12 @@
          <children>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
                <children>
-                  <Label text="Customer:     ">
+                  <Label text="Client:           ">
                      <font>
                         <Font size="15.0" />
                      </font>
                   </Label>
-                  <ComboBox prefHeight="25.0" prefWidth="190.0" />
+                  <ComboBox fx:id="client" prefHeight="25.0" prefWidth="190.0" />
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
@@ -45,7 +44,7 @@
                         <Font size="15.0" />
                      </font>
                   </Label>
-                  <ComboBox prefHeight="25.0" prefWidth="190.0" />
+                  <ComboBox fx:id="flight" prefHeight="25.0" prefWidth="190.0" />
                </children>
             </HBox>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
@@ -55,7 +54,7 @@
                         <Font size="15.0" />
                      </font>
                   </Label>
-                  <TextField prefHeight="31.0" prefWidth="190.0">
+                  <TextField fx:id="winRate" prefHeight="31.0" prefWidth="190.0">
                      <font>
                         <Font size="15.0" />
                      </font>
@@ -64,17 +63,7 @@
             </HBox>
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
                <children>
-                  <Label text="Earnings:">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Label>
-                  <TextArea maxHeight="37.0" prefHeight="37.0" prefWidth="367.0" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
-               <children>
-                  <Button mnemonicParsing="false" style="-fx-background-color: #465380;" text="Add" textFill="WHITE">
+                  <Button mnemonicParsing="false" onAction="#addReservation" style="-fx-background-color: #465380;" text="Add" textFill="WHITE">
                      <font>
                         <Font name="Times New Roman" size="20.0" />
                      </font>
