--- a/src/sample/view/login.fxml
+++ b/src/sample/view/login.fxml
@@ -1,39 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.LoginController">
-   <children>
-      <ImageView fitHeight="700.0" fitWidth="1000.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <image>
-            <Image url="@../images/A321XLR-MEA.jpg" />
-         </image>
-      </ImageView>
-      <Button fx:id="login" layoutX="477.0" layoutY="212.0" mnemonicParsing="false" onAction="#login" style="-fx-background-color: lightblue;" text="Login" AnchorPane.leftAnchor="477.0" AnchorPane.rightAnchor="477.0" AnchorPane.topAnchor="212.0" />
-      <TextField fx:id="username" layoutX="304.0" layoutY="77.0" prefHeight="25.0" prefWidth="193.0" promptText="username" style="-fx-background-color: lightblue;" AnchorPane.leftAnchor="400.0" AnchorPane.rightAnchor="400.0" AnchorPane.topAnchor="100.0">
+<AnchorPane id="AnchorPane" prefHeight="503.0" prefWidth="854.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.LoginController">
+    <children>
+        <AnchorPane prefHeight="503.0" prefWidth="382.0" style="-fx-background-color: #3604c2;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <children>
+                <Label alignment="CENTER" layoutX="92.0" layoutY="45.0" prefHeight="31.0" prefWidth="198.0" text="Flights Agency" textFill="WHITE" AnchorPane.bottomAnchor="427.0" AnchorPane.leftAnchor="92.0" AnchorPane.topAnchor="45.0">
+                    <font>
+                        <Font name="Arial Rounded MT Bold" size="25.0" />
+                    </font>
+                </Label>
+            <ImageView fx:id="butterfly" fitHeight="150.0" fitWidth="200.0" layoutX="116.0" layoutY="102.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="251.0" AnchorPane.leftAnchor="116.0" AnchorPane.topAnchor="102.0">
+               <image>
+                  <Image url="@../images/butterfly.png" />
+               </image>
+            </ImageView>
+                <Label alignment="CENTER" layoutX="79.0" layoutY="301.0" prefHeight="70.0" prefWidth="224.0" text="Facilitating planes ticketing with suitable prices, and providing beneficial advices and services." textFill="WHITE" wrapText="true" AnchorPane.bottomAnchor="132.0" AnchorPane.leftAnchor="79.0" AnchorPane.topAnchor="301.0">
+                    <font>
+                        <Font name="Segoe UI" size="15.0" />
+                    </font>
+                </Label>
+            </children>
+        </AnchorPane>
+        <Pane layoutX="488.0" layoutY="131.0" prefHeight="227.0" prefWidth="283.0" AnchorPane.bottomAnchor="145.0" AnchorPane.topAnchor="131.0">
+            <children>
+                <TextField fx:id="username" layoutX="7.0" prefHeight="34.0" prefWidth="275.0" promptText="username " />
+                <PasswordField fx:id="password" layoutX="7.0" layoutY="61.0" prefHeight="34.0" prefWidth="275.0" promptText="password" stylesheets="@../styling/fullpackstyling.css" />
+                <Button fx:id="login" layoutX="73.0" layoutY="131.0" mnemonicParsing="false" onAction="#login" prefHeight="34.0" prefWidth="137.0" stylesheets="@../styling/fullpackstyling.css" text="Sign in" />
+                <Label fx:id="lblErrors" alignment="CENTER" layoutX="8.0" layoutY="95.0" prefHeight="23.0" prefWidth="275.0" textFill="#ff6354">
+                    <font>
+                        <Font name="Segoe UI" size="10.0" />
+                    </font>
+                </Label>
+            </children>
+        </Pane>
+        <Label alignment="CENTER" layoutX="521.0" layoutY="416.0" prefHeight="23.0" prefWidth="217.0" text="Demo Project For The I3305 Material" textFill="#a6b1cc" AnchorPane.bottomAnchor="65.0">
+            <font>
+                <Font name="Segoe UI" size="12.0" />
+            </font>
+        </Label>
+        <ImageView fitHeight="52.0" fitWidth="43.0" layoutX="382.0" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="-4.0">
+            <image>
+                <Image url="@../images/bookmark.png" />
+            </image>
+        </ImageView>
+      <Label alignment="CENTER" layoutX="492.0" layoutY="439.0" prefHeight="23.0" prefWidth="275.0" text="Dr. Abed Safadi        Dr. Mohammad Hamze" textFill="#a6b1cc" AnchorPane.bottomAnchor="40.0">
          <font>
-            <Font size="14.0" />
-         </font></TextField>
-      <PasswordField fx:id="password" layoutX="304.0" layoutY="134.0" prefHeight="25.0" prefWidth="193.0" promptText="Password" style="-fx-background-color: lightblue;" AnchorPane.leftAnchor="400.0" AnchorPane.rightAnchor="400.0" AnchorPane.topAnchor="150.0">
-         <font>
-            <Font size="14.0" />
+            <Font name="Segoe UI" size="12.0" />
          </font>
-      </PasswordField>
-      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="472.0" layoutY="137.0" visible="false">
-         <image>
-            <Image url="@../images/hide.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="575.0" layoutY="153.0" AnchorPane.rightAnchor="400.0" AnchorPane.topAnchor="153.0">
-         <image>
-            <Image url="@../images/show.png" />
-         </image>
-      </ImageView>
-   </children>
+      </Label>
+      <Label alignment="CENTER" layoutX="509.0" layoutY="466.0" prefHeight="23.0" prefWidth="241.0" text="Hadi Wehbe | Hassan Rida | Sadek Mortada" textFill="#a6b1cc" AnchorPane.bottomAnchor="15.0">
+         <font>
+            <Font name="Segoe UI" size="12.0" />
+         </font>
+      </Label>
+    </children>
 </AnchorPane>
